----------------------------------------------------
-Now kspread can understand Table1!C1 and Table1!c1
it works.
-Improved kspread_dlg_formula

2000-07-05 Wilco Greven <j.w.greven@student.utwente.nl>
-------------------------------------------------------
- For the sake of consistency, better use Shift instead of Control to extend
  a selection.

2000-07-05-Montel laurent <montell@club-internet.fr>
----------------------------------------------------
-bug fix
-Improved kspread_dlg_angle
-Now when you press middle button you can paste fix bug #5009

2000-07-07-Montel laurent <montell@club-internet.fr>
----------------------------------------------------
-Now you can Merge cell and Dissociate cell (when they merged)
but there are against a lot of bug.
-bug fix
-Add new script function (setComment(QString))

2000-07-08-Montel laurent <montell@club-internet.fr>
----------------------------------------------------
-Add new format : time format
there is a bug into klocale, you can't write : 12:15 am
you must write 12:15:08 am (save in international format)
-Bug fix into merge cell
-Now kspread check format into formular.

2000-07-09-Montel laurent <montell@club-internet.fr>
----------------------------------------------------
-Now you write 11:5am, 11:5 am, 11:5:5 am 11:5:5am
kspread test all this string and recognize a time format.
-Now there is completion mode. For the moment completion mode is automatic.

Summary 2000-07-09 ->2000-07-12
Torben is come back!
Torben add time and date support in kscript
=>you can write : in cell A1 : 2000-2-2
cell B1 : =A1+2
        =>result : 2000-2-4
Improved undo
bug fix


2000-07-12-Montel laurent <montell@club-internet.fr>
----------------------------------------------------
-Add new script functions :
setMultirow(bool), multiRow(), setVerticalText(bool), verticalText()
setPrefix(),prefix(),setPostfix(),postfix(),setAlign(),align()
setAlignY(),align(),getFormatNumber(),  setFormatNumber()